# networkcoding

./: Cargo.toml  README.md  cbindgen.toml  fec.h
src/: ffi.rs  lib.rs
src/rlc/: decoder.rs  encoder.rs
src/vandermonde_lc/: decoder.rs  encoder.rs
