[package]
name = "networkcoding"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vandermonde_lc = { git = "ssh://git@github.com/francoismichel/vandermonde-linear-coding.git", branch = "add-send"" }
rustrlc = { git = "ssh://git@github.com/francoismichel/rustrlc.git", optional = true }
rustgf = { git = "ssh://git@github.com/francoismichel/rustgf.git", branch = "nb-equations" }
libc = "0.2.0"
byteorder = "1.4.3"
tinymt = "1.0"
rand = "0.8.4"

[features]
enable-rlc = ["dep:rustrlc"]

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
