[package]
name = "networkcoding"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vandermonde_lc = { git = "https://github.com/francoismichel/vandermonde-linear-coding" }
rustrlc = { git = "https://github.com/francoismichel/rustrlc", optional = true }
rustgf = { git = "https://github.com/francoismichel/rustgfit" }
libc = "0.2.0"
byteorder = "1.4.3"
tinymt = "1.0"
rand = "0.8.4"

[features]
enable-rlc = ["dep:rustrlc"]

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
